update and cleaning up code for better lightgouse respons,

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -4,105 +4,121 @@
 {% block title %}About{% endblock title %}
 
 {% block content %}
-
-    <div class="about-card mb-3 about-bg" style="width:100%">
-        <div class="row g-0">
-            <div class="col-md-4">
-                <img src="{% static 'images/hospital.webp' %}" class="img-fluid rounded-start" alt="Me and my daughter">
-            </div>
-            <div class="col-md-8">
-                <div class="card-body">
-                    <h3 class="card-title">Why I Started Charge-Together:</h3><br>
-                    <p class="card-text">When Our daughter was born with CHARGE Syndrome, our world changed. 
-                        <br>Navigating the medical complexities, daily challenges, 
-                        and emotional rollercoaster <br> was overwhelming. 
-                        I realized that while medical information 
-                        is vital, <br>it is the personal stories and shared experiences 
-                        that truly help families cope and thrive. <br>
-                        I found myself desperately seeking the experiences 
-                        and stories of others <br> who were on a similar journey
-                        I longed for the comfort and guidance that only personal stories can provide,
-                        <br>but struggled to find a community where these narratives were shared. <br>
-                        This profound need for connection and understanding inspired me to start this blog. <br>
-                        And this is my way of creating the community and resource I wished I had when my daughter was born. <br>
-                        It is a place for us to come together, share our experiences, and support one another <br>
-                        through the unique journey of living with CHARGE syndrome. <br><br>
-                        Thank you for being a part of this community. <br>
-                        All my love <br> Linnéa
-                    </p>
-                
+<div class="container text-center">
+    <div class="row about-bg">
+        <div class="about-card mb-3 mx-auto">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="{% static 'images/hospital.webp' %}" class="img-fluid rounded-start" alt="Me and my daughter">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h3 class="card-title">Why I Started Charge Together:</h3>
+                        <br>
+                        <p class="card-text"> When Our daughter was born with CHARGE Syndrome, our world changed. 
+                            Navigating the medical complexities, daily challenges, 
+                            and emotional rollercoaster was overwhelming. 
+                            I realized that while medical information 
+                            is vital, it is the personal stories and shared experiences 
+                            that truly help families cope and thrive. 
+                        </p>
+                        <p>I found myself desperately seeking the experiences 
+                            and stories of others  who were on a similar journey
+                            I longed for the comfort and guidance that only personal stories can provide,
+                            but struggled to find a community where these narratives were shared.
+                        </p>
+                        <p> This profound need for connection and understanding inspired me to start this blog. 
+                            And this is my way of creating the community and resource I wished I had when my daughter was born. 
+                            It is a place for us to come together, share our experiences, and support one another 
+                            through the unique journey of living with CHARGE syndrome.
+                        </p>
+                        <p> Thank you for being a part of this community!</p> 
+                        <p> All my love Linnéa</p>  
+                    
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     <br>
-    <div class="about-card mb-3" style="width:100%">   
-        <div class="row g-0">
-            <div class="col-md-4">
-                <img src="{% static 'images/duy-pham-Cecb0_8Hx-o-unsplash.webp' %}" class="img-fluid rounded-start" alt="">
-            </div>
-            <div class="col-md-8">
-                <div class="card-body">
-                    <h3 class="card-title"> Sharing Personal Stories:</h3><br>
-                    <p class="card-text">
-                        This blog provides a platform for families to share their personal experiences with CHARGE syndrome. <br>
-                        These stories offer practical advice, emotional support, <br> and a sense of connection that is often missing in medical literature.
-                    </p>
+    <div class="row">
+        <div class="about-card mb-3 mx-auto">   
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="{% static 'images/duy-pham-Cecb0_8Hx-o-unsplash.webp' %}" class="img-fluid rounded-start" alt="">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h3 class="card-title"> Sharing Personal Stories:</h3>
+                        <br>
+                        <p class="card-text">
+                            This blog provides a platform for families to share their personal experiences with CHARGE syndrome. 
+                            These stories offer practical advice, emotional support, and a sense of connection that is often missing in medical literature.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="about-card mb-3 mx-auto">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="{% static 'images/tim-marshall-cAtzHUz7Z8g-unsplash.webp' %}" class="img-fluid rounded-start" alt="">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h3 class="card-title"> Building a Support Network:</h3>
+                        <br>
+                        <p class="card-text">
+                            Connecting with others who understand the unique challenges of CHARGE syndrome  can make a significant difference. 
+                            This blog aims to build a network of support where members can share advice, offer encouragement, and form meaningful connections.
 
-    <div class="about-card mb-3" style="width:100%">
-        <div class="row g-0">
-            <div class="col-md-4">
-                <img src="{% static 'images/tim-marshall-cAtzHUz7Z8g-unsplash.webp' %}" class="img-fluid rounded-start" alt="">
+                        </p>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-8">
-                <div class="card-body">
-                    <h3 class="card-title"> Building a Support Network:</h3><br>
-                    <p class="card-text">
-                        Connecting with others who understand the unique challenges of CHARGE syndrome <br> can make a significant difference. <br>
-                        This blog aims to build a network of support where members can share advice, offer encouragement, <br> and form meaningful connections.
+        </div>
+    </div>
+    <div class="row">
+        <div class="about-card mb-3 mx-auto">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="{% static 'images/not-all-heroes-wear-capes.webp' %}" class="img-fluid rounded-start" alt="">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h3 class="card-title">Inspiring Hope and Resilience:</h3>
+                        <br>
+                        <p class="card-text">
+                            The stories shared here are a testament to the incredible strength and resilience of 
+                            individuals and families affected by CHARGE syndrome. 
+                            I hope these stories inspire hope and provide comfort to others on a similar journey.
 
-                    </p>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="about-card mb-3" style="width:100%">
-        <div class="row g-0">
-            <div class="col-md-4">
-                <img src="{% static 'images/not-all-heroes-wear-capes.webp' %}" class="img-fluid rounded-start" alt="">
-            </div>
-            <div class="col-md-8">
-                <div class="card-body">
-                    <h3 class="card-title">Inspiring Hope and Resilience:</h3><br>
-                    <p class="card-text">
-                        The stories shared here are a testament to the incredible strength and resilience of <br>
-                        individuals and families affected by CHARGE syndrome. <br>
-                        I hope these stories inspire hope and provide comfort to others on a similar journey.
-
-                    </p>
+    <div class="row">
+        <div class="about-card mb-3 mx-auto">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="{% static 'images/dewang-gupta-r8q16QN40Xg-unsplash.webp' %}" class="img-fluid rounded-start" alt="">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h3 class="card-title">Want to read more about Charge Syndrome?</h3>
+                        <br>
+                        <a style="text-decoration:none;" target="_blank" href="https://my.clevelandclinic.org/health/diseases/23472-charge-syndrome"> 
+                            If you click here, you can read more in-depth medical information about what Charge Syndrome means
+                        </a>   
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="about-card mb-3" style="width:100%">
-        <div class="row g-0">
-            <div class="col-md-4">
-                <img src="{% static 'images/dewang-gupta-r8q16QN40Xg-unsplash.webp' %}" class="img-fluid rounded-start" alt="">
-            </div>
-            <div class="col-md-8">
-                <div class="card-body">
-                    <h3 class="card-title">Want to read more about Charge Syndrome?</h3><br>
-                       <a style="text-decoration:none;" target="_blank" href="https://my.clevelandclinic.org/health/diseases/23472-charge-syndrome"> 
-                        If you click here, you can read more in-depth medical information about what Charge Syndrome means
-                        </a>
-                    
-                </div>
-            </div>
-        </div>
-    </div>
+</div>
 {% endblock content %}
 
