--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -41,25 +41,24 @@
 </div>
 <!-- Users own blog posts on their profile -->
 <div class="latest-bg">
-    <h2 class="text-center pb-4">Latest Post</h2>
-    <div class="card-container d-flex flex-row flex-wrap justify-content-center row row-cols-1 row-cols-md-3 g-2">
+    <h2 class="text-center">Latest Post</h2>
+    <div class="card-container d-flex flex-row flex-wrap justify-content-center row row-cols-1 row-cols-md-3">
         {% for post in profile.user.post_owner.all %}
-        <a href="{% url 'post_detail' post.id %}" class="post" aria-label="Click to view {{post.title}}">
             <div class="card mb-3">
+                <a href="{% url 'post_detail' post.id %}" class="post" aria-label="Click to view {{post.title}}"></a>
                 <div class="card-body">
-                    <h2 class="card-title">
-                    {{post.title}}
-                    </h2>
+                    <h3 class="card-title">
+                        {{post.title}}
+                    </h3>
                     <p class="card-text text-muted h6">{{post.created_on}} <i class="far fa-heart"></i>
                         {{ post.number_of_likes }}
                     </p>
                 </div>
             </div>
-        </a>
         {% endfor %}
     </div>
 </div>
-    <!-- The Modal for editin profile -->
+    <!-- The Modal for edit profile -->
     <div id="myModal" class="modal mt-5">
         <!-- Modal content -->
         <div class="modal-content container">
