--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,81 +3,87 @@
 {% block title %} Post Detail - {{post.title}}{% endblock title %}
 
 {% block content %}
-    <div class="container">
-        <div class="post-info mt-3 p-1">
-            <div class="post-img">
-                <img src="{{ post.image.url }}" alt="post.image_alt" class="post-pic">
-            </div>
-            <div  class="post-detail">
-                <h1 class="text-center">{{ post.title }}</h1>
-                <p class="text-center"><small>Written by {{post.author}} on {{post.created_on}}</small><br>
-                    {% if request.user == post.author %}
-                        <a href="{% url 'edit_post' post.id %}"><small>Edit</small></a>
-                        <a href="{% url 'delete_post' post.id %}"><small>Delete</small></a>
-                    {% endif %}
-                </p>
-                <hr>
-                <p class="p-3">{{post.excerpt}}</p>    
-            </div>
-        </div>        
-          <div class="post-container m-4">
-            <div class="content p-5">
-                {{post.content|safe}}
-            </div>
+<div class="container">
+    <div class="post-info mt-1 p-1">
+        <div class="post-img">
+            <img src="{{ post.image.url }}" alt="post.image_alt" class="post-pic img-fluid">
         </div>
-        <hr>
-        <div class="row">
-            <div class="col-1">
+        <div class="post-detail">
+            <h1 class="text-center">{{ post.title }}</h1>
+            <p class="text-center"><small>Written by {{post.author}} on {{post.created_on}}</small><br>
+                {% if request.user == post.author %}
+                <a href="{% url 'edit_post' post.id %}"><small>Edit</small></a>
+                <a href="{% url 'delete_post' post.id %}"><small>Delete</small></a>
+                {% endif %}
+            </p>
+            <hr>
+            <p class="p-3">{{post.excerpt}}</p>
+        </div>
+    </div>
+    <div class="post-container m-4">
+        <div class="content">
+            {{post.content|safe}}
+        </div>
+    </div>
+    <hr>
+    <!-- Like button with heart icon -->
+    <div class="row">
+        <div class="col-1">
+            <strong>
                 {% if user.is_authenticated %}
                 <form action="{% url 'post_like' post.id %}" method="POST">
                     {% csrf_token %}
                     {% if post_is_liked %}
-                    <button type="submit" name="post_id" value="{{post.id}}" class="btn-like">
-                        <i class="fas fa-heart"></i> <span class="text-secondary">{{ post.number_of_likes }}</span>
+                    <button type="submit" name="post_id" value="{{post.id}}" class="btn-like"><i
+                            class="bi bi-suit-heart-fill"></i> {{ post.number_of_likes }}
                     </button>
                     {% else %}
-                    <button type="submit" name="post_id" value="{{post.id}}" class="btn-like">
-                        <i class="far fa-heart"></i> <span class="text-secondary">{{ post.number_of_likes }}</span>
+                    <button type="submit" name="post_id" value="{{post.id}}" class="btn-like"><i
+                            class="bi bi-suit-heart"></i> {{ post.number_of_likes }}
                     </button>
-                    {% endif %}  
+                    {% endif %}
                 </form>
                 {% else %}
-                <i class="far fa-heart"></i> <span class="text-secondary">{{post.number_of_likes}}</span> 
-                {% endif %} 
-            </div>  
-            <div class="col-1">
-               <i class="far fa-comments"></i> <span class="text-secondary"> {{post.comments.count}}</span>  
-            </div>
-        </div>
-        <br>
-        <div>
-            <h1>Comments:</h1>
-            {% if user.is_authenticated %}
-            <a class="btn btn-primary btn-sm mb-4" href="{% url 'new_comment' pk=post.pk %}" role="button">Add comment</a>
-            {% else %}
-           <a class="text-decoration-none" href="/accounts/login/"><p>Sign in to leave a comment</p></a>
-            {% endif %}
-            {% for comment in post.comments.all %}
-            <div class="card-comment">
-                <p>
-                    <strong>{{ comment.user }}</strong> -
-                    <span class="text-muted">
-                        {{ comment.created_on }}
-                    </span>
-                    <br>
-                    {{ comment.body|safe }}
-                </p>
-                {% if request.user == comment.user %}
-                <a href="{% url 'edit_comment' comment.id %}"><small>Edit</small></a>
-                <a href="{% url 'delete_comment' comment.id %}"><small>Delete</small></a>
+                <i class="bi bi-suit-heart"></i>{{ post.number_of_likes }}
                 {% endif %}
-            </div>
-            
-            {% empty %}
-            <p>No comments here yet!</p>  
-        </div>  
-        {% endfor %} 
-    </div> 
+            </strong>
+        </div>
+        <!-- Comment count -->
+        <div class="col-1">
+            <strong>
+                <i class="bi bi-chat"></i> {{ post.comments.count }}
+            </strong>
+        </div>
+    </div>
+    <br>
+
+    <h1>Comments:</h1>
+    {% if user.is_authenticated %}
+    <a class="btn btn-primary btn-sm mb-4" href="{% url 'new_comment' pk=post.pk %}" role="button">Add comment</a>
+    {% else %}
+    <a class="text-decoration-none" href="/accounts/login/">
+        <p>Sign in to leave a comment</p>
+    </a>
+    {% endif %}
+    {% for comment in post.comments.all %}
+    <div class="card-comment">
+        <p>
+            <strong>{{ comment.user }}</strong> -
+            <span class="text-muted">
+                {{ comment.created_on }}
+            </span>
+            <br>
+            {{ comment.body|safe }}
+        </p>
+        {% if request.user == comment.user %}
+        <a href="{% url 'edit_comment' comment.id %}"><small>Edit</small></a>
+        <a href="{% url 'delete_comment' comment.id %}"><small>Delete</small></a>
+        {% endif %}
+    </div>
+
+    {% empty %}
+    <p>No comments here yet!</p>
+</div>
+{% endfor %}
+</div>
 {% endblock content %}
-
-
