--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -1,4 +1,4 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
 
@@ -6,14 +6,14 @@
 
 {% block content %}
 <div class="container text-center">
-
+  <h1 class="text-center">{% trans "Sign Up" %}</h1>
+  <p class="text-center">{% blocktrans %}Do you want to become part of our community? Register below!<br> Are you
+    already part of us? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
   <form class="form p-2" id="signup_form" method="post" action="{% url 'account_signup' %}">
-    <h1 class="text-center">{% trans "Sign Up" %}</h1>
-    <p class="text-center">{% blocktrans %}Do you want to become part of our community? Register below!<br> Are you already part of us? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
     {% csrf_token %}
-    {{ form|crispy }}
+    {{form|crispy}}
     {% if redirect_field_value %}
-    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+    <input type="hidden" name="{{redirect_field_name}}" value="{{redirect_field_value }}" />
     {% endif %}
     <button type="submit" class="btn btn-primary w25">Sign Up</button>
   </form>
