--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,27 +1,36 @@
 {% load static %}
 
-<header>
-  {% with request.resolver_match.url_name as url_name %}
-    <nav class="navbar navbar-expand-lg bg-light">
-      <div class="container-fluid">
-        <!-- Logo -->
-        <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/logo.webp' %}" alt="Charge Together Logo" class="logo"></a>
+
+<header class="site-header justify-content-center" role="banner">
+  <div class="container-fluid">
+    <div class="site-header-inner col-sm-12">
+        <a href="{% url 'home' %}" title="Charge Together" rel="home">
+          <img src="{% static 'images/charge-together-high-resolution-logo.webp' %}" alt="Charge Together Logo">
+        </a>
+      </div>
+  </div>
+</header>
+{% with request.resolver_match.url_name as url_name %}
+  <nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+       <!-- Logo -->
+        <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/charge-together-high-resolution-logo2.webp' %}" alt="Charge Together Logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <!-- Navigation items -->
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <div class="collapse navbar-collapse  justify-content-center" id="navbarNavDropdown">
           <ul class="navbar-nav">
-            <li class="nav-item">
+            <li class="nav-item-1">
               <a class="nav-link {% if url_name == 'home' %}active{% endif %}" aria-current="page" href="{% url 'home' %}">Home</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item-1">
               <a class="nav-link {% if url_name == 'post_list' %}active{% endif %}" href="{% url 'post_list' %}">Blog</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item-1">
               <a class="nav-link {% if url_name == 'about' %}active{% endif %}" href="{% url 'about' %}">About</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item-1">
               <a class="nav-link {% if url_name == 'contact' %}active{% endif %}" href="{% url 'contact' %}">Contact</a>
             </li>
             {% if request.user.is_authenticated %}
@@ -40,19 +49,16 @@
               </ul>
             </li>
             {% else %}
-            <li class="nav-item">
+            <li class="nav-item-1">
               <a class="nav-link {% if url_name == 'accounts_signup' %}active{% endif %}" href="/accounts/signup/">Register</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item-1">
               <a class="nav-link {% if url_name == 'accounts_login' %}active{% endif %}" href="/accounts/login/">Login</a>
             </li>
             {% endif %}
           </ul>
         </div>
       </div>
-    </nav>
-  {% endwith %}
-    <div class="hero container-fluid">
-      <img src="{% static 'images/carl-hunley-jr-kZ_GzLAy4WM-unsplash.webp' %}" alt="image">
-    </div>
-</header>
+  </nav>  
+{% endwith %}
+
