--- a/static/css/style.css
+++ b/static/css/style.css
@@ -38,6 +38,7 @@ h4,
 h5,
 h6 {
     font-family: var(--title);
+    font-weight: 200;
 }
 
 
@@ -146,11 +147,6 @@ a.nav-link:hover {
     --bs-dropdown-min-width: 8rem;
     --bs-dropdown-border-width: 0px;
 
-}
-
-
-a.dropdown-menu:hover {
-    --bs-nav-link-hover-color: ;
 }
 
 
@@ -382,8 +378,7 @@ a.dropdown-menu:hover {
 
     .dropdown-menu[data-bs-popper] {
         left: 20px;
-        --bs-dropdown-bg: #d8d8d8;
-        ;
+        --bs-dropdown-bg: rgb(225, 236, 238);
         top: 116%;
         --bs-dropdown-padding-y: -2.5rem;
 
@@ -457,6 +452,11 @@ a.dropdown-menu:hover {
         padding-bottom: 3rem;
 
     }
+
+    .about-bg {
+        margin-top: 2rem;
+    }
+    
 
 }
 
