--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,9 @@
     --title: 'EB Garamond', serif;
     --main-font: 'Roboto', serif;
 
+    /* Hero */
+    --image: url("../images/carl-hunley-jr-kZ_GzLAy4WM-unsplash.webp");
+
     /* Color */
     --white: #FFFFFF;
     --black: #000000;
@@ -48,6 +51,34 @@ main {
 }
 
 
+.hero-section {
+    background-image: var(--image);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 95%;
+    width: 95%;
+   
+
+}
+
+.my-2 {
+
+    margin-top: 0.5rem;
+    margin-bottom: 6.5rem !important;
+}
+
+
+
+.hero-card-bg {
+    background-color: rgba(143, 174, 176, 0.789);
+    width: 50rem;
+    border-radius: 2px;
+    margin-bottom: 1rem;
+    width: 24rem;
+}
+
+
 /* Form Styling */
 .form {
     width: 100%;
@@ -70,11 +101,6 @@ main {
 .bi-chat {
     font-size: 100%;
 }
-
-.btn-edit {
-    margin-top: 1rem;
-}
-
 
 /* Comments  */
 
@@ -156,39 +182,14 @@ a.nav-link:hover {
 }
 
 
-.hero-section {
-    background-image: url("../images/carl-hunley-jr-kZ_GzLAy4WM-unsplash.webp");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 95%;
-    width: 95%;
-
-}
-
-.my-2 {
-
-    margin-top: 0.5rem;
-    margin-bottom: 6.5rem !important;
-}
-
-
-
-.hero-card-bg {
-    background-color: rgba(143, 174, 176, 0.789);
-    width: 50rem;
-    border-radius: 2px;
-    margin-bottom: 1rem;
-    width: 24rem;
-}
 
 
 /* Styling Blog Post */
 
 .card {
     margin-top: 1rem;
-    padding: 1rem;
-    height: 91%;
+    /* padding: 1rem; */
+    height: 90%;
     box-shadow: var(--small-box-shadow);
 
 
@@ -210,6 +211,7 @@ a.nav-link:hover {
 
 
 }
+
 
 .post-container {
     display: flex;
@@ -243,7 +245,7 @@ a.nav-link:hover {
 
 
 .post-pic {
-    width: 70%;
+    width: 60%;
     height: auto;
     border-radius: 8px;
 }
@@ -259,12 +261,11 @@ a.nav-link:hover {
 }
 
 .card-container {
-    padding-bottom: 3rem;
-    margin-left: 1rem;
+    /* padding-bottom: 3rem; */
 }
 
 .profile-card {
-    margin-top: 2rem;
+    margin-top: 1rem;
 
 }
 
@@ -277,7 +278,9 @@ a.nav-link:hover {
 }
 
 .lastest-card {
-    width: 80%
+    width: 60%;
+    margin-left: 1rem;
+
 }
 
 
@@ -310,10 +313,10 @@ a.nav-link:hover {
         width: 50%;
     }
 
-    .img-container {
+    /* .img-container {
         flex-direction: row;
         width: 29%;
-    }
+    } */
 
     .latest-bg {
         background-color: var(--soft-green);
@@ -321,6 +324,12 @@ a.nav-link:hover {
         margin-bottom: 1rem;
 
     }
+
+    .lastest-card {
+        width: 100%;
+    
+    }
+    
 
     .hero-section {
         height: 70vh;
@@ -337,6 +346,10 @@ a.nav-link:hover {
         margin-top: 0.5rem;
         margin-bottom: 0.5rem !important;
     }
+
+    /* .post-pic {
+        width: 90%;
+    } */
 
 }
 
@@ -403,29 +416,17 @@ a.nav-link:hover {
     }
 
 
-    .post-info {
-        flex-direction: row;
-        border: 1px solid var(--grey-green);
-
-    }
-
-    .post-img {
-        margin: 0 auto;
-    }
-
     .post-detail {
         margin-top: 1rem;
         width: 60%;
         padding: 2rem;
     }
 
-    .post-container {
-        flex-direction: row;
-
-    }
-
+    .post-container,
+    .post-info,
     .profile {
         flex-direction: row;
+
     }
 
     .profile-post {
@@ -456,7 +457,11 @@ a.nav-link:hover {
     .about-bg {
         margin-top: 2rem;
     }
-    
+
+    /* .profile img {
+        width: 100%;
+    }
+     */
 
 }
 
