--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="container text-center">
     <div class="row about-bg">
-        <div class="about-card mb-3 mx-auto">
+        <div class="about-card mb-3 mx-auto p-2">
             <div class="row g-0">
                 <div class="col-md-4">
                     <img src="{% static 'images/hospital.webp' %}" class="img-fluid rounded-start" alt="Me and my daughter">
