--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -12,6 +12,11 @@
   <a href="{% url 'post_detail' post.id %}" class="post" aria-label="Click to view {{post.title}}">
     <div class="card m-3" style="width:18rem;">
       <img src="{{post.image.url}}" class="card-img-top img-fluid"  alt="{{post.image_alt}}">
+
+      <!-- image-flash from "I think therfore i blog" -->
+      <div class="image-flash p-1">
+        <p class="author">Author: {{ post.author }}</p>
+      </div>
       <div class="card-body">
         <h3 class="card-title">{{post.title}}</h3>
         <hr>
