--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,24 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600&family=Roboto:wght@400;500&display=swap');
-
 
 :root {
     /* Fonts */
     --title: 'EB Garamond', serif;
     --main-font: 'Roboto', serif;
 
-    /* Hero */
-    --image: url("../images/carl-hunley-jr-kZ_GzLAy4WM-unsplash.webp");
 
     /* Color */
-    --white: #FFFFFF;
-    --black: #000000;
-    --soft-green: #6a8c8f30;
+    --white: #fff;
+    --off-white: #f6f6f6;
+    --black: #000;
+    --soft-green:  #AACCCC;
     --grey-green: #24494c71;
 
 
     /* Utils */
     --smal-box-shadow: 1px -1px 7px 0 #00000061;
-    --border: 1px solid #00000030;
+    --border: 1px solid ##00000030;
+
+    /* Hero */
+    --image: url("../images/carl-hunley-jr-kZ_GzLAy4WM-unsplash.webp");
 }
 
 /* Main Style setting */
@@ -34,6 +34,8 @@ body {
     font-family: var(--main-font);
 }
 
+
+
 h1,
 h2,
 h3,
@@ -41,9 +43,7 @@ h4,
 h5,
 h6 {
     font-family: var(--title);
-    font-weight: 200;
 }
-
 
 main {
     flex: 1 0 auto;
@@ -69,7 +69,6 @@ main {
 }
 
 
-
 .hero-card-bg {
     background-color: rgba(143, 174, 176, 0.789);
     width: 50rem;
@@ -85,9 +84,11 @@ main {
     margin: 3% auto;
     box-shadow: var(--small-box-shadow);
     border-radius: 5px;
-    text-align: left;
-    background-color: var(--soft-green);
+    
+    
 }
+
+
 
 
 /* Buttons */
@@ -195,6 +196,19 @@ a.nav-link:hover {
 
 }
 
+/* code from "I think therfore I blog" with some modification to fit whit my own code */
+.image-flash {
+    position: absolute;
+    bottom: 55%;
+    min-width: 30%;
+    /* left: 1px; */
+    background-color:rgba(143, 174, 176, 0.858);
+    font-weight: 400;
+    
+    
+}
+
+
 .post {
     text-decoration: none;
     color: var(--black);
@@ -260,9 +274,6 @@ a.nav-link:hover {
     width: 100%;
 }
 
-.card-container {
-    /* padding-bottom: 3rem; */
-}
 
 .profile-card {
     margin-top: 1rem;
