--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -1,17 +1,20 @@
-{% extends "base.html" %}
+{% extends "account/base.html" %}
 
 {% load i18n %}
 
 {% block title %}{% trans "Signup" %}{% endblock title %}
 
 {% block content %}
-<div class="container text-center">
+<div class="container">
   <h1 class="text-center">{% trans "Sign Up" %}</h1>
-  <p class="text-center">{% blocktrans %}Do you want to become part of our community? Register below!<br> Are you
-    already part of us? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+
+  <p class="text-center">{% blocktrans %}Welcome to the Charge Together blog!<br> Do you want to become a part of our community? Register below! <br> Are you
+  already part of us? Then please
+  <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+  
   <form class="form p-2" id="signup_form" method="post" action="{% url 'account_signup' %}">
     {% csrf_token %}
-    {{form|crispy}}
+    {{ form|crispy }}
     {% if redirect_field_value %}
     <input type="hidden" name="{{redirect_field_name}}" value="{{redirect_field_value }}" />
     {% endif %}
