--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -6,7 +6,7 @@
 {% block title %}Profile - {{profile.user.username}}{% endblock title %}
 <!-- The profile page -->
 {% block content %}
-<div class="container">
+<div class="container p-4">
     <div class="profile-info">
         <div class="profile-card mb-4">
             <div class="row ">
@@ -22,7 +22,7 @@
                         <p><strong>Post: </strong>{{profile.user.post_owner.count}}</p>
                     {% if request.user == profile.user %}
                             <button id="myBtn" class="btn btn-secondary w-30 btn-edit">Edit Profile</button>
-                         {% endif %}
+                        {% endif %}
                 </div>
                 <div class="col-md-8">
                     <div class="profile-card-body">
